{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 252,
  "lineage": "0d68a709-fd88-2133-4667-cc3aa774d067",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-route-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0386eff063233532a",
            "id": "rtb-0386eff063233532a",
            "owner_id": "314559611088",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-06f082e3453c8e08d",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-route-private-Mumbai"
            },
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_instance.Mumbai-south",
            "aws_security_group.mumbai-south-sg",
            "aws_subnet.Pub-sn1Mumbai-South",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0957b0ff8de29dd74",
            "domain": "vpc",
            "id": "eipalloc-02a3b387c7dd5356a",
            "instance": "i-06f082e3453c8e08d",
            "network_interface": "eni-05cf83b8c222d5bfe",
            "private_dns": "ip-10-0-0-198.ap-south-1.compute.internal",
            "private_ip": "10.0.0.198",
            "public_dns": "ec2-3-6-153-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.153.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Mumbai-south",
            "aws_internet_gateway.igw",
            "aws_security_group.mumbai-south-sg",
            "aws_subnet.Pub-sn1Mumbai-South",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mumbai-south",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0009e88f05cf1087c",
            "arn": "arn:aws:ec2:ap-south-1:314559611088:instance/i-06f082e3453c8e08d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f082e3453c8e08d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-south",
            "monitoring": false,
            "primary_network_interface_id": "eni-05cf83b8c222d5bfe",
            "private_dns": "ip-10-0-0-198.ap-south-1.compute.internal",
            "private_ip": "10.0.0.198",
            "public_dns": "ec2-52-66-243-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.243.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-059ad80d53849dac4",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04278ef1b5472a6f1",
            "tags": {
              "Name": "Mumbai-south"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc82a969bf690a6f"
            ]
          },
          "dependencies": [
            "aws_security_group.mumbai-south-sg",
            "aws_subnet.Pub-sn1Mumbai-South",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-012e7a05f479d2984",
            "owner_id": "314559611088",
            "tags": {
              "Name": "mumbai-igw"
            },
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02dd68cb3e0fc22f1",
            "owner_id": "314559611088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012e7a05f479d2984",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-Mumbai"
            },
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts-p-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e62e688be362e1f",
            "route_table_id": "rtb-0386eff063233532a",
            "subnet_id": "subnet-034560eff1913e25b"
          },
          "dependencies": [
            "aws_subnet.Pri-sn1Mumbai-South",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arts1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a64a48166607759",
            "route_table_id": "rtb-02dd68cb3e0fc22f1",
            "subnet_id": "subnet-04278ef1b5472a6f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.Pub-sn1Mumbai-South",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumbai-south-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:security-group/sg-0bc82a969bf690a6f",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0bc82a969bf690a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mumbai-south-sg",
            "name_prefix": null,
            "owner_id": "314559611088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-mumbai-south"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri-sn1Mumbai-South",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:subnet/subnet-034560eff1913e25b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-034560eff1913e25b",
            "map_public_ip_on_launch": false,
            "owner_id": "314559611088",
            "tags": {
              "Name": "Pri-sn1Mumbai-South"
            },
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-sn1Mumbai-South",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:subnet/subnet-04278ef1b5472a6f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04278ef1b5472a6f1",
            "map_public_ip_on_launch": true,
            "owner_id": "314559611088",
            "tags": {
              "Name": "Pub-sn1Mumbai-South"
            },
            "vpc_id": "vpc-0e557837ac2fdc074"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumbai-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:314559611088:vpc/vpc-0e557837ac2fdc074",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062114936582d9267",
            "default_route_table_id": "rtb-0386eff063233532a",
            "default_security_group_id": "sg-09266bbff98652a31",
            "dhcp_options_id": "dopt-59e90032",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e557837ac2fdc074",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0386eff063233532a",
            "owner_id": "314559611088",
            "tags": {
              "Name": "Mumbai-vpc"
            }
          }
        }
      ]
    }
  ]
}